--- a/.github/workflows/plesk-deploy.yml
+++ b/.github/workflows/plesk-deploy.yml
@@ -8,8 +8,8 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 12 * * *"
-  workflow_dispatch:
+    - cron: "0 12 * * *" # Запуск каждый день в 12:00 UTC
+  workflow_dispatch: # Позволяет запускать workflow вручную
 
 env:
   TG_CHAT: ${{ secrets.TG_CHAT }}
@@ -29,9 +29,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Check Hugo config file
-        run: test -f config.toml || (echo "Configuration file not found!" && exit 1)
-
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
@@ -46,7 +43,7 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
-       - name: Sync files using rsync
+      - name: Sync files using rsync
         run: |
           rsync -avz --delete -e "ssh -p ${{ env.SITE_PORT }} -o StrictHostKeyChecking=no" ./public/. ${{ env.USER }}@${{ env.SITE_HOST }}:/var/www/vhosts/${{ env.SITE }}/httpdocs
 
@@ -56,7 +53,6 @@ jobs:
             # Ensure the correct ownership and group for all files
             chown -R ${{ env.USER }}:${{ env.USER }} /var/www/vhosts/${{ env.SITE }}/httpdocs
           EOF
-
 
       - name: Telegram success
         uses: appleboy/telegram-action@master
